--- a/src/main/java/com/GUI/ChatGUI.form
+++ b/src/main/java/com/GUI/ChatGUI.form
@@ -468,6 +468,9 @@
                     </Property>
                     <Property name="horizontalAlignment" type="int" value="0"/>
                     <Property name="text" type="java.lang.String" value="Enviar Mensaje"/>
+                    <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                      <Color id="Cursor de Mano"/>
+                    </Property>
                   </Properties>
                 </Component>
               </SubComponents>
