--- a/src/main/java/com/GUI/ChatGUI.form
+++ b/src/main/java/com/GUI/ChatGUI.form
@@ -3,7 +3,7 @@
 <Form version="1.9" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Eliza - Ronny, Leonardo"/>
+    <Property name="title" type="java.lang.String" value="Eliza Chatbot - Ronny"/>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[870, 460]"/>
     </Property>
